--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+jwt.secret-key = 56594576722678616771745d5054253b7c327b594236675e7457415678
+jwt.expiration = 86400000
+jwt.refresh-expiration = 6048000007
