--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/securitydb
+spring.datasource.url=jdbc:postgresql://localhost:5432/cloud
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,8 +13,6 @@ spring.jpa.hibernate.ddl-auto=none
 jwt.secret-key = 56594576722678616771745d5054253b7c327b594236675e7457415678
 jwt.expiration = 86400000
 jwt.refresh-expiration = 6048000007
-
-
 
 spring.data.mongodb.host = localhost
 spring.data.mongodb.port = 27017
