--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/cloud
+spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:20814/railway
 spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.datasource.password=root
+spring.datasource.password=d3C-4D3Gdb4Be3DDG5Fd5e1Ag52-BacB
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
-logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 jwt.secret-key = 56594576722678616771745d5054253b7c327b594236675e7457415678
 jwt.expiration = 86400000
 jwt.refresh-expiration = 6048000007
 
-spring.data.mongodb.host = localhost
-spring.data.mongodb.port = 27017
-spring.data.mongodb.database = chatdb
-spring.data.mongodb.authentication-database = admin
+#spring.data.mongodb.uri =mongodb://roundhouse.proxy.rlwy.net:25841
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=1cDh2De1dhBe1cHaeddBABd2Ab3hFEBF
+spring.data.mongodb.host=roundhouse.proxy.rlwy.net
+spring.data.mongodb.port=25841
+spring.data.mongodb.database=test
+spring.data.mongodb.authentication-database=admin
