--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:20814/railway
+#spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:20814/railway
+#spring.datasource.username=postgres
+#spring.datasource.password=d3C-4D3Gdb4Be3DDG5Fd5e1Ag52-BacB
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/cloud
 spring.datasource.username=postgres
-#spring.datasource.password=root
-spring.datasource.password=d3C-4D3Gdb4Be3DDG5Fd5e1Ag52-BacB
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
@@ -12,9 +16,13 @@ jwt.expiration = 86400000
 jwt.refresh-expiration = 6048000007
 
 #spring.data.mongodb.uri =mongodb://roundhouse.proxy.rlwy.net:25841
-spring.data.mongodb.username=mongo
-spring.data.mongodb.password=1cDh2De1dhBe1cHaeddBABd2Ab3hFEBF
-spring.data.mongodb.host=roundhouse.proxy.rlwy.net
-spring.data.mongodb.port=25841
-spring.data.mongodb.database=test
-spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=mongo
+#spring.data.mongodb.password=1cDh2De1dhBe1cHaeddBABd2Ab3hFEBF
+#spring.data.mongodb.host=roundhouse.proxy.rlwy.net
+#spring.data.mongodb.port=25841
+#spring.data.mongodb.database=test
+
+spring.data.mongodb.host = localhost
+spring.data.mongodb.port = 27017
+spring.data.mongodb.database = chatdb
+spring.data.mongodb.authentication-database = admin
