--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-update
+spring.jpa.hibernate.ddl-auto=update
 
 jwt.secret-key = 56594576722678616771745d5054253b7c327b594236675e7457415678
 jwt.expiration = 86400000
@@ -20,7 +20,7 @@ spring.data.mongodb.username=mongo
 spring.data.mongodb.password=GFbf51a4DGFfCDG5fge4Eh3fAF4-a3cE
 spring.data.mongodb.host=roundhouse.proxy.rlwy.net
 spring.data.mongodb.port=11402
-spring.data.mongodb.database=test
+spring.data.mongodb.database=chat
 
 #spring.data.mongodb.host = localhost
 #spring.data.mongodb.port = 27017
