--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,12 @@ jwt.secret-key = 56594576722678616771745d5054253b7c327b594236675e7457415678
 jwt.expiration = 86400000
 jwt.refresh-expiration = 6048000007
 
-spring.data.mongodb.uri =mongodb://roundhouse.proxy.rlwy.net:26219
+spring.data.mongodb.uri =mongodb://roundhouse.proxy.rlwy.net:26219/test?authSource=admin
 spring.data.mongodb.username=mongo
 spring.data.mongodb.password=-3Eh-h3FADhh62bdCh45cD2eddG-ce-d
 spring.data.mongodb.host=roundhouse.proxy.rlwy.net
 spring.data.mongodb.port=26219
-spring.data.mongodb.database=test
+#spring.data.mongodb.database=test
 
 #spring.data.mongodb.host = localhost
 #spring.data.mongodb.port = 27017
