--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:20814/railway
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:19004/railway
 spring.datasource.username=postgres
-spring.datasource.password=d3C-4D3Gdb4Be3DDG5Fd5e1Ag52-BacB
+spring.datasource.password=3E*fcDCEB*D4GA5BB2gfb2f6bebb4cBb
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/cloud
@@ -9,17 +9,17 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 jwt.secret-key = 56594576722678616771745d5054253b7c327b594236675e7457415678
 jwt.expiration = 86400000
 jwt.refresh-expiration = 6048000007
 
-spring.data.mongodb.uri =mongodb://roundhouse.proxy.rlwy.net:26219/test?authSource=admin
+spring.data.mongodb.uri =mongodb://roundhouse.proxy.rlwy.net:15500/test?authSource=admin
 spring.data.mongodb.username=mongo
-spring.data.mongodb.password=-3Eh-h3FADhh62bdCh45cD2eddG-ce-d
+spring.data.mongodb.password=2E4edaBhb22EdbbEGgb132ca53Hch3DD
 spring.data.mongodb.host=roundhouse.proxy.rlwy.net
-spring.data.mongodb.port=26219
+spring.data.mongodb.port=15500
 #spring.data.mongodb.database=test
 
 #spring.data.mongodb.host = localhost
